--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "autoencoder.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -668,6 +669,7 @@
       },
       "cell_type": "code",
       "source": [
+        "#ADDING NOISE TO IMAGES\n",
         "noise_factor = 0.5\n",
         "x_train_noisy = train_X + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=train_X.shape)\n",
         "x_valid_noisy = valid_X + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=valid_X.shape)"
@@ -1251,6 +1253,21 @@
       "cell_type": "code",
       "source": [
         "pred = autoencoder.predict(x_valid_noisy)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "j_-hEdo7AeE5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "autoencoder.save('autoencoder_model.h5')\n",
+        "from google.colab import files\n",
+        "files.download('autoencoder_model.h5')\n"
       ],
       "execution_count": 0,
       "outputs": []
